# bookmark_grpc_codegen

./: .gitignore  .npmignore  Cargo.toml  README.md  build.rs  go.mod  go.sum  justfile  package-lock.json  package.json  tsconfig.json  tsup.config.ts
bindings/: BookmarkCollection.ts  BookmarkCollectionEntries.ts  DeleteBookmarkCollectionRequest.ts  DeleteBookmarkCollectionResponse.ts  DeleteBookmarkCollectionsEntryResponse.ts  DeleteVaultEntryResponse.ts  DeleteVaultRequest.ts  DeleteVaultResponse.ts  ForgottenPasswordResponse.ts  GetBookmarkCollectionRequest.ts  GetBookmarkCollectionResponse.ts  GetBookmarkCollectionsEntryRequest.ts  GetBookmarkCollectionsEntryResponse.ts  GetVaultEntryRequest.ts  GetVaultEntryResponse.ts  GetVaultRequest.ts  GetVaultResponse.ts  HealthCheckRequest.ts  HealthCheckResponse.ts  ListBookmarkCollectionEntryRequest.ts  ListBookmarkCollectionEntryResponse.ts  ListBookmarkCollectionsRequest.ts  ListBookmarkCollectionsResponse.ts  ListVaultEntryRequest.ts  ListVaultEntryResponse.ts  ListVaultsRequest.ts  ListVaultsResponse.ts  LogActivityRequest.ts  LogActivityResponse.ts  LoginResponse.ts  NewBookmarkCollectionRequest.ts  NewBookmarkCollectionResponse.ts  NewBookmarkCollectionsEntryRequest.ts  NewVaultEntryRequest.ts  NewVaultRequest.ts  NewVaultResponse.ts  ProfileRequest.ts  ProfileResponse.ts  ProfileUpdateRequest.ts  ProfileUpdateResponse.ts  (+14 more)
proto/: activity.proto  authentication.proto  bookmark_collection_entries.proto  bookmark_collections.proto  common.proto  health_check.proto  user_profile.proto  vault_entries.proto  vaults.proto
(+182 files in other folders)
