[package]
name = "vault_grpc"
version = "0.6.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tonic-reflection = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0.214", features = ["derive"] }
chrono = "0.4.38"
build = "0.0.2"

[build-dependencies]
tonic-build = "0.12.3"


[features]
default = ["client"]
client = []
server = []
