[package]
name = "bookmark_grpc_codegen"
version = "0.8.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tonic-reflection = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
ts-rs = "10.0.0"

[build-dependencies]
tonic-build = "0.12.3"


[features]
default = ["client"]
client = []
server = []
